<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SeriesBodyActivity" >

 <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
            
     <TextView
        android:id="@+id/tvAnalyte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/analyte" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
	    <EditText android:id="@+id/edAnalyte" android:layout_width="wrap_content" android:layout_height="wrap_content" android:ems="10" 
	        android:inputType="text"
	        android:enabled="false" >
	    </EditText>
	
	    <Button
	        android:id="@+id/btnSelectAnalyte"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="onClick"
	        android:text="@string/select" />
    
    </LinearLayout>

    <TextView
        android:id="@+id/tvInjection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/injection" />
    
    <EditText
        android:id="@+id/edInjection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="text">
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/duration" />
    
    <EditText
        android:id="@+id/edDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="number">
    </EditText>

    <TextView
        android:id="@+id/tvStep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/step" />
    
    <EditText
        android:id="@+id/edStepsInMinute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="number">
    </EditText>

    <TextView
        android:id="@+id/tvMinimum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/retention_buttom" />
    
    <EditText
        android:id="@+id/edRetentionButtom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="number">
    </EditText>

    <TextView
        android:id="@+id/tvMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/retention_top" />
    
    <EditText
        android:id="@+id/edRetentionTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="number">
    </EditText>

    <TextView
        android:id="@+id/tvMaxAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/retention_moment" />
    
    <EditText
        android:id="@+id/edRetentionAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="number">
    </EditText>

    <TextView
        android:id="@+id/tvTs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/time_series" />
    
    <EditText
        android:id="@+id/edTimeSeries"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="text"
        android:enabled="false">
    </EditText>

    <Button
        android:id="@+id/btnGenerateTimeSeries"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="onClick"
        android:text="@string/generate_time_series" />

    <Button
        android:id="@+id/btnStoreSeriesBody"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="onClick"
        android:text="@string/save" />
        
  </LinearLayout>
      
 </ScrollView>

