<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SeriesSolventsActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/solvent" />

    <EditText android:id="@+id/edtSolvent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:ems="10" android:layout_alignLeft="@+id/textView1" 
        android:layout_below="@+id/textView1" android:layout_marginTop="5dp"
        android:inputType="text"
        android:enabled="false">
    </EditText>

    <Button
        android:id="@+id/btnSelectSolvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_toRightOf="@+id/edtSolvent"
        android:onClick="onClick"
        android:text="@string/select" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSelectSolvent"
        android:layout_marginTop="10dp"
        android:text="@string/amount" />
    
    <EditText
        android:id="@+id/edtAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="text">
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnStoreSeriesSolvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edtAmount"
        android:layout_alignRight="@+id/btnSelectSolvent"
        android:layout_below="@+id/edtAmount"
        android:layout_marginTop="24dp"
        android:onClick="onClick"
        android:text="@string/store_series_solvent" />

</RelativeLayout>
